--- a/public/css/Our_Team.css
+++ b/public/css/Our_Team.css
@@ -8,9 +8,13 @@ body {
     overflow-x: hidden;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-
+.bdy{
+    padding-top: 150px;
+}
 #main {
+    
     margin: 50px;
+    
     display: flex;
     flex-direction: row;
     justify-content: center;
