--- a/public/css/login.css
+++ b/public/css/login.css
@@ -6,11 +6,15 @@ body {
 }
 .container {
     width: 30%;
-    margin: 50px auto;
+    margin: 150px auto;
     background: #fff;
     padding: 30px;
     border-radius: 15px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+}
+.form{
+    padding-top: 100px;
+    
 }
 h2 {
     text-align: center;
