--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,29 +1,29 @@
-* {
+*{
     margin: 0;
     padding: 0;
-  }
+}
   
-  body {
-    background-color: #000000;
+body {
+    /* background-color: #dd7d7d; */
     font-family:Arial, Helvetica, sans-serif ;
-  }
-  body::-webkit-scrollbar {
+}
+body::-webkit-scrollbar {
     display: block;
     width: 8px;
     background: #0071e3;
-  }
+}
   
-  body::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb {
     background-color: #fff;
   
     border-radius: 50px;
-  }
+}
   
-  body {
+body {
     overflow-x: hidden;
-  }
+}
   
-  #cursor {
+#cursor {
     height: 20px;
     width: 20px;
     background-color: #0071e3;
@@ -31,9 +31,8 @@
     position: fixed;
     z-index: 99;
     transition: all linear 0.1s;
-  }
-  
-  #cursor-blur {
+}
+#cursor-blur {
     height: 200px;
     width: 200px;
     background-color: #0071e368;
@@ -42,10 +41,11 @@
     filter: blur(80px);
     z-index: 9;
     transition: all linear 0.4s;
-  }
+}
   
-  #nav {
+#nav {
     height: 13vh;
+    /* background-color: #0071e3; */
     color: #000000;
     width: 100%;
     display: flex;
@@ -56,40 +56,41 @@
     position: fixed;
     justify-content: flex-start;
     z-index: 999;
-  }
+    margin-bottom: 150px;
+}
   
-  #nav::-webkit-scrollbar {
-    background-color: #393838;
+#nav::-webkit-scrollbar {
+    /* background-color: #000000; */
     color: #fff;
-  }
+}
   
-  #nav h3,h4,span {
+#nav h3,h4,span {
     font-weight: 100;
     cursor: pointer;
     font-size: 1.15vw;
     font-weight: bold;
-  }
+}
   
-  #logo {
+#logo {
     height: 7.5vh;
     width: 2vw;
     font-size: 50px;
     color: red;
-  }
+}
   
-  #nav h4:hover {
+#nav h4:hover {
     border-bottom: 2px solid #000;
     padding-bottom: 2px;
     font-size: 1.4vw;
-  }
+}
   
-  #nav h3,h4::-webkit-scrollbar :hover {
+#nav h3,h4::-webkit-scrollbar :hover {
     text-decoration: underline;
     font-size: 1.4vw;
     color: rgb(255, 0, 0);
-  }
+}
   
-  #nav button {
+#nav button {
     margin-left: 22vw;
     padding: 0.7vw;
     border-radius: 10%;
@@ -98,14 +99,14 @@
     font-size: 14px;
     cursor: pointer;
     font-weight: bold;
-  }
+}
   
-  #main {
+#main45 {
     position: relative;
     background-color: rgba(159, 158, 158, 0.23);
-  }
+}
   
-  #page1 {
+#page1 {
     position: absolute;
     height: 100vh;
     width: 100%;
@@ -117,16 +118,16 @@
     text-align: center;
     z-index: 10;
     
-  }
-  #page-1para{
+}
+#page-1para{
     padding-top: 1%;
-  }
-  #page1 h1 {
+}
+#page1 h1 {
     font-size: 3.5vw;
     font-weight: 900;
     position: relative;
-  }
-  #page1 h1::before {
+}
+#page1 h1::before {
     content: "RISE. UPSKILL. SHINE.";
     position: absolute;
     color: #000;
@@ -134,14 +135,14 @@
     left: -2px;
     -webkit-text-stroke: 2px #0071e3;
     z-index: -1;
-  }
-  #page1 h2 {
+}
+#page1 h2 {
     font-size: 30px;
     font-weight: 800;
     margin-top: 10px;
     margin-bottom: 20px;
-  }
-  #page1 p {
+}
+#page1 p {
     font-size: 1vw;
     font-weight: 400;
     width: 40%;
@@ -150,9 +151,9 @@
     padding: 1%;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: #ffffff;
-  }
+}
   
-  .main1{
+.main1{
     position: absolute;
     padding-top: 450px;
     width: 100%;
@@ -160,10 +161,10 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
-    
-  } 
   
-  #states,#cities{
+} 
+  
+#states,#cities{
     font-size: large;
     font-weight: 200;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -173,14 +174,14 @@
     padding-left: 10px;
     border-radius: 16px;
     z-index: 99;
-  }
+}
   
-  #states option {
+#states option {
      padding: 5px;
      
-  }
+}
   
-  .nextbutton{
+.nextbutton{
     position: absolute;
     padding-top: 580px;
     width: 100%;
@@ -188,9 +189,9 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
-  }
+}
   
-  .nextbutton button {
+.nextbutton button {
     padding: 0.7vw;
     border-radius: 10%;
     box-shadow: 1px 1px black;
@@ -198,18 +199,22 @@
     font-size: 14px;
     cursor: pointer;
     font-weight: bold;
-  }
+}
   
-  #nav button:hover,
-  .nextbutton button:hover {
+#nav button:hover,
+.nextbutton button:hover {
     font-size: 16px;
-  }
+}
   
-  video {
+video {
     width: 100%;
     height: 100%;
     object-fit: cover;
     z-index: -1;
     position: fixed;
-  }
+}
+a{
+  text-decoration: none;
+  color: black;
+}
   
