--- a/templates/views/home.pug
+++ b/templates/views/home.pug
@@ -25,7 +25,7 @@ html(lang='en')
         h1 RISE. UPSKILL. SHINE.
         h2#page-1para WELCOME TO NOTE-O-HUB
         p#page-1para
-          | Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry&apos;s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+          |  Welcome to Note-O-hub, your premier destination for B.Tech education excellence. With a commitment to bridging the gap between classroom learning and real-world application, we offer comprehensive resources, personalized mentorship, and innovative tools to empower B.Tech students across India.
         .main1
           select#states(onchange='populateCities(this.value)')
             option(value='', disabled='', selected='') Select A State
