--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 .container {
-    max-width: 800px;
+    max-width: fit-content;
     margin: 100px auto;
     padding: 20px;
     background-color: #fff;
@@ -46,4 +46,26 @@ h1 {
     min-width: 200px;
     max-width: 300px;
     text-align: center;
+}
+
+.branches {
+    padding: 10px;
+    gap: 50px;
+
+    background: none;
+}
+
+.branch-button {
+
+
+    margin: 0;
+    padding: 1vw;
+    border-radius: 15px;
+    box-shadow: 1px 1px black;
+    color: rgb(255, 255, 255);
+    background-color: rgb(45, 45, 45);
+    font-size: 18px;
+    cursor: pointer;
+    font-weight: bold;
+    min-width: 10vw;
 }
