--- a/templates/views/AP1.pug
+++ b/templates/views/AP1.pug
@@ -4,8 +4,10 @@ html(lang='en')
     meta(charset='UTF-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title Applied Physics-1
-    link(rel='stylesheet', href='AP1.css')
+    style   
+      include ../../public/css/AP1.css
   body
+    //- include ../partials/navbar.pug
     .main
       h1 Applied Physics-1
     .work
