--- a/templates/views/delhi.pug
+++ b/templates/views/delhi.pug
@@ -7,6 +7,7 @@ html(lang='en')
     style   
         include ../../public/css/styles.css
   body
+    //- include ../partials/navbar.pug
     .container
       h1 College Courses
       #collegeDropdownContainer.dropdown
