--- a/templates/views/AP1.pug
+++ b/templates/views/AP1.pug
@@ -7,7 +7,7 @@ html(lang='en')
     style   
       include ../../public/css/AP1.css
   body
-    //- include ../partials/navbar.pug
+    include ../partials/navbar.pug
     .main
       h1 Applied Physics-1
     .work
@@ -41,7 +41,7 @@ html(lang='en')
         i.fa-brands.fa-youtube(style='color: rgb(0, 0, 0); font-size: 23px; height: 2px;')
     #premium.hidden
       // Content for Premium Course
-      h1(style='margin-top: 40px; margin-left: 25vw;') Premium Course content goes here.
+      h1(style='margin-top: 40px; margin-left: 33vw;') Premium Course content goes here.
     // ------------------------------------------------------------- javascript -------------------------------------------------------
     script.
       function toggleVisibility(id) {
