--- a/templates/views/CSE.pug
+++ b/templates/views/CSE.pug
@@ -7,7 +7,7 @@ html(lang='en')
     style   
       include ../../public/css/cse.css
   body
-    //- include ../partials/navbar.pug
+    include ../partials/navbar.pug
     .container
       .image-container
         img.image(src='./images/3rd.jpg', alt='Image', height='70', width='50')
