--- a/public/css/ECE.css
+++ b/public/css/ECE.css
@@ -11,6 +11,8 @@ body {
     justify-content: space-between;
     align-items: flex-start;
     padding: 20px;
+    padding-top: 87px;
+    padding-bottom: 0;
 }
 
 .image-container {
