--- a/templates/partials/navbar.pug
+++ b/templates/partials/navbar.pug
@@ -9,9 +9,10 @@ html(lang='en')
   body
     #nav
       span#logo &#x1D40D;.
-      h3(style="font-size: 30px; font-weight: bold; font-family: league system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; padding-left: 1.2vw; padding-right: 3.6vw; color: red;")
-        | Note
-        span(style='color: white; font-size: 30px;') -O-Hub
+      a(href="/home")
+        h3(style="font-size: 30px; font-weight: bold; font-family: league system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; padding-left: 1.2vw; padding-right: 3.6vw; color: red;")
+          |  Note 
+          span(style='color: white; font-size: 30px;') -O-Hub
       h4 
         a(href="/home") Home
       h4(style='text-decoration: none; color: black;')
