--- a/public/css/AP1.css
+++ b/public/css/AP1.css
@@ -1,5 +1,5 @@
 *{
-    margin: 0 30px;
+    margin: 0 ;
     padding: 0;
 }
 
@@ -28,7 +28,6 @@ body {
     flex-direction: row;
     gap: 4px;
     justify-content: center;
-    /* justify-content: space-evenly; */
 }
 
 .work button {
@@ -72,6 +71,66 @@ body {
     cursor: pointer;
     font-weight: bold;
     min-width: 10vw;
+}
+
+.spotify_playlists{
+    padding: 60px 0 10px 0;
+
+}
+
+.spotify_playlists .list{
+    display: flex;
+    /* grid-template-columns: 1fr 1fr 1fr 1fr; */
+    justify-content: center;
+    /* overflow: hidden; */
+}
+
+.spotify_playlists .list .item{
+    min-width: 250px;
+    width: 160px;
+    padding: 15px;
+    background-color: #eca7a7;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: all ease 0.4s;
+}
+
+.spotify_playlists .list .item:hover{
+    background-color: #ab4c4c;
+
+}
+
+.spotify_playlists .list .item img{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    border-radius: 6px;
+    margin-bottom: 10px;
+}
+
+.spotify_playlists .list .item h2{
+    display: flex;
+    justify-content: center;
+    color: #000000;
+    margin-bottom: 10px;
+    font-weight: bold;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
+    font-size: 25px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-decoration: none;
+}
+
+.spotify_playlists .list .item p{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #2d2d2d;
+    font-size: 15px;
+    padding-bottom: 5px;
+    line-height: 20px;
+    font-weight: 600;
 }
 
 
