--- a/templates/views/AP1.pug
+++ b/templates/views/AP1.pug
@@ -4,7 +4,7 @@ html(lang='en')
     meta(charset='UTF-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title Applied Physics-1
-    style   
+    style 
       include ../../public/css/AP1.css
   body
     include ../partials/navbar.pug
@@ -41,7 +41,15 @@ html(lang='en')
         i.fa-brands.fa-youtube(style='color: rgb(0, 0, 0); font-size: 23px; height: 2px;')
     #premium.hidden
       // Content for Premium Course
-      h1(style='margin-top: 40px; margin-left: 33vw;') Premium Course content goes here.
+      // <h1 style="margin-top: 40px; margin-left: 25vw;">Premium Course content goes here.</h1>
+      .spotify_playlists
+        .list
+          .item
+            a(href='')
+              img(src='../images/Screenshot 2024-02-25 141559.png')
+            h2
+              a(href='')  Applied Physics-1
+            p Anonymous
     // ------------------------------------------------------------- javascript -------------------------------------------------------
     script.
       function toggleVisibility(id) {
