--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,8 +1,11 @@
+*{
+    margin: 0;
+    padding: 0;
+}    
+
 body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
-    margin: 0;
-    padding: 0;
 }
 
 .container {
@@ -13,6 +16,7 @@ body {
     border-radius: 10px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
     text-align: center;
+    margin-top: 13vh;
     /* display: flex; */
     /* align-items: center; */
     /* justify-content: center; */
