--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,6 +7,9 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
 }
+.superContainer{
+    padding-top: 50px;
+}
 
 .container {
     max-width: max-content;
@@ -24,6 +27,7 @@ body {
 
 h1 {
     color: #333;
+    padding-bottom: 15px;
 }
 
 .dropdown {
