jee_haan_mai_ hi_hu_khalnayak

--- a/public/css/course.css
+++ b/public/css/course.css
@@ -4,7 +4,9 @@ body {
     margin: 0;
     padding: 0;
 }
-
+/* .superContainer{
+    padding-top: 100px;
+} */
 .container {
     padding-top: 13vh;
     display: flex;
