--- a/templates/views/AP1.pug
+++ b/templates/views/AP1.pug
@@ -45,10 +45,10 @@ html(lang='en')
       .spotify_playlists
         .list
           .item
-            a(href='')
+            a(href='/course')
               img(src='../images/Screenshot 2024-02-25 141559.png')
             h2
-              a(href='')  Applied Physics-1
+              a(href='/course')  Applied Physics-1
             p Anonymous
     // ------------------------------------------------------------- javascript -------------------------------------------------------
     script.
