--- a/templates/views/home.pug
+++ b/templates/views/home.pug
@@ -15,8 +15,10 @@ html(lang='en')
       h4 Home
       h4
         a(href='myteam') Our Team
-      h4 Contact Us
-      h4 Courses
+      h4
+        a(href="/contact") Contact Us
+      h4 
+        a(href="/course") Courses
       button(type='button')
         a(href="/signup")  Login/Register
     video(autoplay='', loop='true', muted='', src='../videos/143681 (Original).mp4')
