--- a/templates/partials/navbar.pug
+++ b/templates/partials/navbar.pug
@@ -17,7 +17,9 @@ html(lang='en')
         a(href="/home") Home
       h4(style='text-decoration: none; color: black;')
         a(href='/myteam') Our Team
-      h4 Contact Us
-      h4 Courses
+      h4(style='text-decoration: none; color: black;')
+        a(href="/contact") Contact Us
+      h4(style='text-decoration: none; color: black;') 
+        a(href="/course") Courses
       button(type='button')
         a(href="/signup")  Login/Register
