--- a/templates/views/myteam.pug
+++ b/templates/views/myteam.pug
@@ -36,9 +36,9 @@ html(lang='en')
                     h2 Chinmay Singh
                     p Backend Developer
                     .fa-brand
-                        a(href='https://github.com/itz-Pratham')
+                        a(href='https://github.com/Chinmay67')
                             i.fa-brands.fa-github
-                        a(href='https://www.linkedin.com/in/pratham-mittal-4b59a725a/')
+                        a(href='www.linkedin.com/in/chinmay-singh-4092b0253')
                             i.fa-brands.fa-linkedin
                 .item
                     img(src='https://i.pinimg.com/originals/d3/45/46/d345468921a881540051564e18bec18f.jpg')
