--- a/templates/partials/navbar.pug
+++ b/templates/partials/navbar.pug
@@ -19,5 +19,7 @@ html(lang='en')
         a(href='/myteam') Our Team
       h4 Contact Us
       h4 Courses
+      h4  
+        a(href="/community") Join Us
       button(type='button')
         a(href="/signup")  Login/Register
