--- a/templates/partials/navbar.pug
+++ b/templates/partials/navbar.pug
@@ -17,16 +17,11 @@ html(lang='en')
         a(href="/home") Home
       h4(style='text-decoration: none; color: black;')
         a(href='/myteam') Our Team
-<<<<<<< HEAD
       h4(style='text-decoration: none; color: black;')
         a(href="/contact") Contact Us
       h4(style='text-decoration: none; color: black;') 
         a(href="/course") Courses
-=======
-      h4 Contact Us
-      h4 Courses
-      h4  
+      h4(style='text-decoration: none; color: black;') 
         a(href="/community") Join Us
->>>>>>> 2c7ecf3de7ec77f4a10064932372d362743f88c0
       button(type='button')
         a(href="/signup")  Login/Register
