--- a/templates/views/home.pug
+++ b/templates/views/home.pug
@@ -19,6 +19,8 @@ html(lang='en')
         a(href="/contact") Contact Us
       h4 
         a(href="/course") Courses
+      h4 
+        a(href="/community") Join Us
       button(type='button')
         a(href="/signup")  Login/Register
     video(autoplay='', loop='true', muted='', src='../videos/143681 (Original).mp4')
