--- a/templates/views/myteam.pug
+++ b/templates/views/myteam.pug
@@ -25,11 +25,11 @@ html(lang='en')
                 .item
                     img(src='https://i.pinimg.com/originals/d3/45/46/d345468921a881540051564e18bec18f.jpg')
                     h2 Karan Kumar
-                    p Frontend Developer
+                    p Leader
                     .fa-brand
                         a(href='https://github.com/itz-Pratham')
                             i.fa-brands.fa-github
-                        a(href='https://www.linkedin.com/in/pratham-mittal-4b59a725a/')
+                        a(href='https://www.linkedin.com/in/karan-kumar-68ba20272/')
                             i.fa-brands.fa-linkedin
                 .item
                     img(src='https://i.pinimg.com/originals/d3/45/46/d345468921a881540051564e18bec18f.jpg')
@@ -38,15 +38,15 @@ html(lang='en')
                     .fa-brand
                         a(href='https://github.com/Chinmay67')
                             i.fa-brands.fa-github
-                        a(href='www.linkedin.com/in/chinmay-singh-4092b0253')
+                        a(href='https://www.linkedin.com/in/chinmay-singh-4092b0253/')
                             i.fa-brands.fa-linkedin
                 .item
                     img(src='https://i.pinimg.com/originals/d3/45/46/d345468921a881540051564e18bec18f.jpg')
                     h2 Dhruv Gupta
-                    p Frontend Developer
+                    p UI/UX Designer
                     .fa-brand
-                        a(href='https://github.com/itz-Pratham')
+                        a(href='https://github.com/dhruvgupta686')
                             i.fa-brands.fa-github
-                        a(href='https://www.linkedin.com/in/pratham-mittal-4b59a725a/')
+                        a(href='https://www.linkedin.com/in/dhruv-gupta-72a8512a3/')
                             i.fa-brands.fa-linkedin
     script(src='https://kit.fontawesome.com/20db7e1e15.js', crossorigin='anonymous')
