--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,7 +5,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    background-color: #7c7c7c;
 }
 .superContainer{
     padding-top: 50px;
