--- a/templates/views/ECE.pug
+++ b/templates/views/ECE.pug
@@ -12,7 +12,7 @@ html(lang='en')
       .image-container
         img.image(src='./images/3rd.jpg', alt='Image', height='70', width='50')
       .text-container
-        h1(style='font-size:80px;') STEP TOWARDS SUCCESS
+        h1(style='font-size:75px; margin-left:65px;') STEP TOWARDS SUCCESS
         .dropdowns
           //
             <select id="branch-select">
