--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,7 +5,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #7c7c7c;
+    background-color: rgb(45, 45, 45);
 }
 .superContainer{
     padding-top: 50px;
