--- a/templates/views/signup.pug
+++ b/templates/views/signup.pug
@@ -8,6 +8,8 @@ html(lang='en')
         include ../../public/css/signup.css
   body
     include ../partials/navbar.pug
+    .bgcolor
+      h1 sldjsdjsiodjsiodhsoidhsoidhsoihdsdoiihd
     .form
       .container
         h2 Registration Form
