--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -55,3 +55,13 @@ body {
 .form-group button:hover {
     background-color: #45a049;
 }
+.bgcolor{
+    
+    width: 100%;
+    position: fixed;
+    height: 13vh;
+    background-color: #4CAF50;
+}
+.bgcolor h1{
+    color:#4CAF50
+}
